--- a/DemoMVC/Views/Shared/_Layout.cshtml
+++ b/DemoMVC/Views/Shared/_Layout.cshtml
@@ -32,6 +32,9 @@
                          <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login">Dang nhap</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Student" asp-action="Demo">Student</a>
+                        </li>
                     </ul>
                 </div>
             </div>
