--- a/DemoMVC/Views/NguyenVanLoc/Index.cshtml
+++ b/DemoMVC/Views/NguyenVanLoc/Index.cshtml
@@ -1,4 +1,4 @@
-@model IEnumerable<DemoMVC.Controllers.NguyenVanLoc>
+@model IEnumerable<DemoMVC.Models.Entities.NguyenVanLoc>
 
 @{
     ViewData["Title"] = "Index";
