--- a/DemoMVC/Views/Employee/Index.cshtml
+++ b/DemoMVC/Views/Employee/Index.cshtml
@@ -1,4 +1,4 @@
-@model IEnumerable<DemoMVC.Models.Entities.Person>
+@model IEnumerable<DemoMVC.Models.Entities.Employee>
 
 @{
     ViewData["Title"] = "Index";
@@ -12,8 +12,11 @@
 <table class="table">
     <thead>
         <tr>
-             <th>
-                @Html.DisplayNameFor(model => model.PersonID)
+            <th>
+                @Html.DisplayNameFor(model => model.EmployeeID)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Company)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.HoTen)
@@ -27,6 +30,12 @@
     <tbody>
 @foreach (var item in Model) {
         <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.EmployeeID)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Company)
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.HoTen)
             </td>
