--- a/DemoMVC/Views/Employee/Create.cshtml
+++ b/DemoMVC/Views/Employee/Create.cshtml
@@ -1,4 +1,4 @@
-@model DemoMVC.Models.Entities.Person
+@model DemoMVC.Models.Entities.Employee
 
 @{
     ViewData["Title"] = "Create";
@@ -6,12 +6,22 @@
 
 <h1>Create</h1>
 
-<h4>Person</h4>
+<h4>Employee</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="EmployeeID" class="control-label"></label>
+                <input asp-for="EmployeeID" class="form-control" />
+                <span asp-validation-for="EmployeeID" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Company" class="control-label"></label>
+                <input asp-for="Company" class="form-control" />
+                <span asp-validation-for="Company" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <label asp-for="PersonID" class="control-label"></label>
                 <input asp-for="PersonID" class="form-control" />
