--- a/DemoMVC/Views/Employee/Details.cshtml
+++ b/DemoMVC/Views/Employee/Details.cshtml
@@ -1,4 +1,4 @@
-@model DemoMVC.Models.Entities.Person
+@model DemoMVC.Models.Entities.Employee
 
 @{
     ViewData["Title"] = "Details";
@@ -7,9 +7,21 @@
 <h1>Details</h1>
 
 <div>
-    <h4>Person</h4>
+    <h4>Employee</h4>
     <hr />
     <dl class="row">
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.EmployeeID)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.EmployeeID)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Company)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Company)
+        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.HoTen)
         </dt>
